[package]
name = "enumscribe"
version = "0.1.0"
authors = ["Tom Panton <pantonshire@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Pantonshire/enumscribe"
readme = "../README.md"
description = "Procedural macros for converting between enums and strings"

[dependencies]
enumscribe_derive = { version = "0.1.0", path = "../enumscribe_derive", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["derive", "derive_serde"]
derive = ["enumscribe_derive"]
derive_serde = ["derive", "enumscribe_derive/serde"]
