[package]
name = "enumscribe"
version = "0.2.0"
authors = ["Tom Panton <pantonshire@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Pantonshire/enumscribe"
readme = "README.md"
description = "Derive macros for converting between enums and strings"
categories = ["encoding"]
keywords = ["enum", "derive", "serde"]

[dependencies]
enumscribe_derive = { version = "0.2.0", path = "../enumscribe_derive", default-features = false, optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["derive", "derive_serde"]
derive = ["enumscribe_derive"]
derive_serde = ["derive", "enumscribe_derive/serde"]
