[package]
name = "enumscribe"
version = "0.3.1"
authors = ["Tom Panton <pantonshire@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/pantonshire/enumscribe"
readme = "README.md"
description = "Derive macros for converting between enums and strings"
categories = ["encoding"]
keywords = ["enum", "derive", "serde"]

[dependencies]
enumscribe_derive = { version = "0.3.1", path = "../enumscribe_derive", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["std", "derive", "derive_serde"]
std = ["enumscribe_derive/std"]
derive = ["enumscribe_derive"]
derive_serde = ["derive", "serde", "enumscribe_derive/serde"]
serde = ["derive_serde", "dep:serde"]
