[package]
name = "enumscribe_derive"
version = "0.1.2"
authors = ["Tom Panton <pantonshire@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Pantonshire/enumscribe"
readme = "README.md"
description = "Derive macros for converting between enums and strings"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

[features]
default = ["serde"]
serde = []
